--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ div.tocify {
   <a href="index.html">Introduction</a>
 </li>
 <li>
-  <a href="00_Navigation.html">00_Navigation</a>
+  <a href="Navigation.html">Navigation</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
