fixing navigation typo

--- a/Navigation.html
+++ b/Navigation.html
@@ -306,7 +306,7 @@ div.tocify {
 <li><p><a href="03_basicBars.html">03_basicBars</a></p></li>
 <li><p><a href="04_basicLines.html">04_basicLines</a></p></li>
 <li><p><a href="05_basicPlots1.html">05_basicPlots1</a></p></li>
-<li><p><a href="href:%2006_basicPlots2.html">06_basicPlots2</a></p></li>
+<li><p><a href="06_basicPlots2.html">06_basicPlots2</a></p></li>
 <li><p><a href="07_qplot.html">07_qplot</a></p></li>
 <li><p><a href="08_ggplotBars.html">08_ggplotBars</a></p></li>
 <li><p><a href="09_ggplotPublication.html">09_ggplotPublication</a></p></li>
