--- a/index.html
+++ b/index.html
@@ -296,9 +296,12 @@ div.tocify {
 </div>
 
 
-<p>Aside from this document (00_Introduction), this series correspond to R scripts of the same name. 01_basicHist.html describes in detail what you’ll see in 01_basicHist.R and so on. This allows us keep the annotations in the R script fairly light and allows you to have this html guide open or printed out while you work with the script.</p>
+<p>All the scripts and data is available at <a href="https://github.com/dailyherald/R_graphics" class="uri">https://github.com/dailyherald/R_graphics</a></p>
+<p>Aside from this document (00_Introduction), this series correspond to R scripts of the same name, found in the “scripts” folder of the site linked above.</p>
+<p>So, 01_basicHist.html describes in detail what you’ll see in 01_basicHist.R and so on. This allows us keep the annotations in the R script fairly light and allows you to have this html guide open or printed out while you work with the script.</p>
 <p>The idea is that while you’re working with the R scripts, you can have the html file open in a browser window. The html files can be printed too. Use whatever works best for you.</p>
 <p>If you need some assistance with these, please let me know.</p>
+<p>Use the <a href="Navigation.html">Navigation page</a> to begin.</p>
 <div id="important-note" class="section level4">
 <h4>Important note</h4>
 <p>Especially if you’re new to coding, you’re not going to understand everything in these files.</p>
