--- a/Navigation.html
+++ b/Navigation.html
@@ -316,6 +316,7 @@ div.tocify {
 <li><p><a href="13_ggplotLines.html">13_ggplotLines</a></p></li>
 <li><p><a href="14_ggplotArea.html">14_ggplotArea</a></p></li>
 <li><p><a href="15_AllTogether.html">15_AllTogether</a></p></li>
+<li><p><a href="M01_dataprep.html">M01_Beginning Mapping - Data prep</a></p></li>
 </ul>
 </div>
 
