--- a/07_qplot.html
+++ b/07_qplot.html
@@ -307,7 +307,9 @@ div.tocify {
 <p>Put it this way: R is used by professionals like sociologists and medical doctors who do complex studies and generate a lot of data. There are specialized libraries like “Array Based CpG Region Analysis Pipeline” that concerns just a single region of dna.</p>
 <p>These professionals need to visualize their data for themselves, and then generate professional-looking plots for their publications. qplots are the kind of thing they do for themselves, the full ggplot2 graphic is the kind of thing they submit for publication.</p>
 <p>Let’s take a look at our data using qplot. There’s a good introduction here: <a href="http://www.statmethods.net/advgraphs/ggplot2.html" class="uri">http://www.statmethods.net/advgraphs/ggplot2.html</a></p>
-<p>First, let’s load in the libraries and data.</p>
+<p>To use these ggplot2 and all the stuff that comes with it, you’ll need to install the “tidyverse.” Totally not kidding.</p>
+<p>Run install.packages(“tidyverse”)</p>
+<p>Next, let’s load in the libraries and data.</p>
 <pre class="r"><code>library(readr)
 library(ggplot2)
 library(ggthemes)
