--- a/Navigation.html
+++ b/Navigation.html
@@ -301,6 +301,7 @@ div.tocify {
 <ul>
 <li><p><a href="index.html">Introduction</a></p></li>
 <li><p>Navigation</p></li>
+<li><p><a href="00_quickStart.html">00_quickStart</a></p></li>
 <li><p><a href="01_basicHist.html">01_basicHist</a></p></li>
 <li><p><a href="02_basicDots.html">02_basicDots</a></p></li>
 <li><p><a href="03_basicBars.html">03_basicBars</a></p></li>
