--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@ div.tocify {
 </div>
 
 
-<p>All the scripts and data is available at <a href="https://github.com/dailyherald/R_graphics" class="uri">https://github.com/dailyherald/R_graphics</a></p>
+<p>All the scripts and data for this series is available at <a href="https://github.com/dailyherald/R_graphics" class="uri">https://github.com/dailyherald/R_graphics</a></p>
+<p>You’ll need some of the csv files there to do the later tutorials.</p>
 <p>Aside from this document (00_Introduction), this series correspond to R scripts of the same name, found in the “scripts” folder of the site linked above.</p>
 <p>So, 01_basicHist.html describes in detail what you’ll see in 01_basicHist.R and so on. This allows us keep the annotations in the R script fairly light and allows you to have this html guide open or printed out while you work with the script.</p>
 <p>The idea is that while you’re working with the R scripts, you can have the html file open in a browser window. The html files can be printed too. Use whatever works best for you.</p>
@@ -351,7 +352,7 @@ div.tocify {
 <h4>Learning R</h4>
 <p>Swirl is a set of interactive - free - tutorials that will take you through the basics of learning R and R-studio. <a href="http://swirlstats.com/" class="uri">http://swirlstats.com/</a> To install it, type: <code>install.packages(&quot;swirl&quot;)</code> in the R console. It’ll download and install it for you.</p>
 <p>To run swirl, type: <code>library(swirl)</code> and that will activate the tutorials.</p>
-<p>I’m also going through this Udemy class: <a href="https://www.udemy.com/r-programming/" class="uri">https://www.udemy.com/r-programming/</a> I find it to be a nice compliment to the swirl tutorials.</p>
+<p>I also did this Udemy class: <a href="https://www.udemy.com/r-programming/" class="uri">https://www.udemy.com/r-programming/</a> I find it to be a nice compliment to the swirl tutorials.</p>
 <p>If you’ve never done a Udemy class, the first time you go to their website and look at a specific class, it’ll offer that class to you for a drastically reduced price. This r-programming class was only $10.</p>
 </div>
 <div id="other-resources---graphics" class="section level4">
