adjusting ndex, adding link

--- a/Navigation.html
+++ b/Navigation.html
@@ -317,7 +317,7 @@ div.tocify {
 <li><p><a href="13_ggplotLines.html">13_ggplotLines</a></p></li>
 <li><p><a href="14_ggplotArea.html">14_ggplotArea</a></p></li>
 <li><p><a href="15_AllTogether.html">15_AllTogether</a></p></li>
-<li><p><a href="M01_dataprep.html">M01_Mapping data prep</a></p></li>
+<li><p><a href="https://dailyherald.github.io/flask_crashes/index.html">M01_Exploring data with visualizations and mapping</a></p></li>
 </ul>
 </div>
 
