--- a/index.html
+++ b/index.html
@@ -322,15 +322,16 @@ div.tocify {
 </div>
 <div id="how-these-guides-are-structured" class="section level2">
 <h2>How these guides are structured</h2>
-<p>These guides assume you’ve installed R and R Studio, and have done some of the first Swirl tutorials. Say, the tutorials up until “functions.”</p>
+<p>These guides assume you’ve installed R and R Studio, and have a little experience working with R.</p>
 <ul>
+<li><p>00_Quickstart is just that - it’ll get you up and running with R and give you some familarity working with it through R-Studio.</p></li>
 <li><p>From 01 to 06, we look at R’s basic plotting tools. For exploring data yourself, or just for practice, these are good to know. However, their design isn’t great for print or online. And, it takes some work to get a decent graphic out of them.</p></li>
 <li><p>At 07, we start working with ggplot2, the R graphics library that takes a sophisticated approach to graphics. 08_qplot is part of ggplot - q stands for quick, and it’s meant to create quick visualizations that help you understand the data. Qplot is an excellent way of quickly looking at your data, and it’s a lot easier to use than the basic plots. Along with ggplot2, qplot should replace all those basic plots.</p></li>
 <li><p>From 08 through 14, we learn to create the most common graphic types - bar charts, stacked bar charts, grouped bar charts, line and area charts. We also learn how to create color and black-and-white pdfs suitable for print publication and color png files for online.</p></li>
 <li><p>15 demonstrates how to explore relationships between data using qplot scatter plots and finally creating a publication-ready scatter plot that shows what we found.</p></li>
-<li><p>From 16 on, we’ll show how to do some less used graphic types like box plots and heat maps.</p></li>
-<li><p>Finally, M01 and on looks at R’s ability to do maps - specifically choropleth maps.</p></li>
+<li><p>Finally, M01 is a link to another guide I created on how we examined cyclist and pedestrian crashes in the six-county area. It’s four parts, with the last two on how we used mapping in R to examine the data.</p></li>
 </ul>
+<p>I may add more tutorials at a later date - for instance looking at what happens if something goes wrong.</p>
 </div>
 <div id="links-and-resources" class="section level2">
 <h2>Links and resources</h2>
@@ -354,6 +355,7 @@ div.tocify {
 <p>To run swirl, type: <code>library(swirl)</code> and that will activate the tutorials.</p>
 <p>I also did this Udemy class: <a href="https://www.udemy.com/r-programming/" class="uri">https://www.udemy.com/r-programming/</a> I find it to be a nice compliment to the swirl tutorials.</p>
 <p>If you’ve never done a Udemy class, the first time you go to their website and look at a specific class, it’ll offer that class to you for a drastically reduced price. This r-programming class was only $10.</p>
+<p>Here’s a terrific book on R and data science written by one of the most respected people in the R community: <a href="http://r4ds.had.co.nz/" class="uri">http://r4ds.had.co.nz/</a> If you went through this book, you’ll come out the other side ready to tackle anything.</p>
 </div>
 <div id="other-resources---graphics" class="section level4">
 <h4>Other resources - graphics</h4>
@@ -362,7 +364,6 @@ div.tocify {
 <p>This is an excellent introduction to R for reporters. <a href="https://paldhous.github.io/NICAR/2017/r-analysis.html" class="uri">https://paldhous.github.io/NICAR/2017/r-analysis.html</a> This was taught at NICAR 2017, but the step-by-step worksheet is fairly easy to follow.</p>
 <p>Want to see how 538 does their graphics? They use R, and they’re putting all their code online for free. Here’s a description of what they’re doing: <a href="https://cran.r-project.org/web/packages/fivethirtyeight/vignettes/fivethirtyeight.html" class="uri">https://cran.r-project.org/web/packages/fivethirtyeight/vignettes/fivethirtyeight.html</a></p>
 <p>And here’s the R scripts and datasets they examined <a href="https://github.com/rudeboybert/fivethirtyeight/tree/master/data-raw" class="uri">https://github.com/rudeboybert/fivethirtyeight/tree/master/data-raw</a></p>
-<p>Here’s the book on data science and R, with one of the authors being the person who created the visualization library ggplo2 <a href="http://r4ds.had.co.nz/" class="uri">http://r4ds.had.co.nz/</a></p>
 <p>Here’s a free book on advanced R: <a href="http://adv-r.had.co.nz/" class="uri">http://adv-r.had.co.nz/</a></p>
 <p>David Montgomery of the Pioneer Press shared this analysis of police data, from working the data to visualizing it: <a href="https://github.com/pioneerpress/code/tree/master/st-anthony-police" class="uri">https://github.com/pioneerpress/code/tree/master/st-anthony-police</a></p>
 <p>He’s constantly doing little things to develop his skills - just like an athlete will work out every day. Here’s where he has that, some of it fun: <a href="https://github.com/dhmontgomery/personal-work" class="uri">https://github.com/dhmontgomery/personal-work</a></p>
